--- a/app/styles/_modal.scss
+++ b/app/styles/_modal.scss
@@ -5,7 +5,7 @@
 	bottom: 0;
 	right: 0;
 	background: rgba(0, 0, 0, 0.5);
-	z-index: 999;
+	z-index: 3;
 }
 
 .modal {
